--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@ return false;
                         <a href="#" aria-label="twitter"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.facebook.com/sayyestomyneeds/" aria-label="facebook"><i class="fab fa-facebook-square"></i></a>
                         <a href="https://www.instagram.com/sayyestomyneeds/" aria-label="instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="https://wa.me/<08025817715>" aria-label="whatsapp"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/<+2348025817715>" aria-label="whatsapp"><i class="fab fa-whatsapp"></i></a>
                         
                         <a href="https://www.youtube.com/watch?v=IQq42h4lHoA" aria-label="youtube"><i class="fab fa-youtube"></i></a>
                     </div><!-- /.footer-social -->
